--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,10 @@
   port = 8888
   targetPort = 8080
 
+[functions]
+  node_bundler = "esbuild"
+  external_node_modules = ["json-server"]
+
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/api/:splat"
