--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "netlify:dev": "netlify dev",
-    "postinstall": "cd netlify/functions && npm install"
+    "postinstall": "cd netlify/functions && npm install",
+    "functions:install": "cd netlify/functions && npm install"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
