--- a/netlify/functions/package.json
+++ b/netlify/functions/package.json
@@ -5,6 +5,9 @@
   "main": "api.cjs",
   "dependencies": {
     "json-server": "^1.0.0-beta.3",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2"
   }
 }
