--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "server": "npx json-server --watch db.json --port 3001",
+    "server": "npx json-server --watch db.json --port 3002",
     "dev:all": "concurrently \"npm run dev\" \"npm run server\"",
     "prebuild": "node netlify/build.js",
     "build": "vite build",
@@ -46,6 +46,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@reduxjs/toolkit": "^2.6.1",
+    "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.56.2",
     "@types/uuid": "^9.0.7",
     "class-variance-authority": "^0.7.1",
