update- server to src

--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "dev": "vite",
     "server": "npx json-server --watch db.json --port 3002",
     "dev:all": "concurrently \"npm run dev\" \"npm run server\"",
+    "api:server": "cd server && npm run dev",
+    "api:install": "cd server && npm install",
+    "dev:api": "concurrently \"npm run dev\" \"npm run api:server\"",
     "prebuild": "node netlify/build.js",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
     "netlify:dev": "netlify dev",
+    "init:db": "node netlify/functions/init-local-db.js",
+    "dev:netlify": "npm run init:db && netlify dev",
     "postinstall": "cd netlify/functions && npm install",
     "functions:install": "cd netlify/functions && npm install"
   },
