update- server out side the src

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "server": "npx json-server --watch db.json --port 3002",
     "dev:all": "concurrently \"npm run dev\" \"npm run server\"",
-    "api:server": "cd server && npm run dev",
-    "api:install": "cd server && npm install",
+    "api:server": "cd ../server && npm run dev",
+    "api:install": "cd ../server && npm install",
     "dev:api": "concurrently \"npm run dev\" \"npm run api:server\"",
     "prebuild": "node netlify/build.js",
     "build": "vite build",
